# my-learnopengl

./: CMakeLists.txt  README.md
.cache/clangd/index/: app.h.AC3162D22EAE54FE.idx  cocoa_init.m.E827B6D9C5606E43.idx  cocoa_monitor.m.94CE62DB8E75A6D6.idx  cocoa_platform.h.19ACDE745FF3A13E.idx  cocoa_window.m.4E1CFDC5472D9603.idx  context.c.46FF21CD6AEEF8EC.idx  glad.c.43F60F4A4C096FEA.idx  glad.h.3D4C3BDFB2A58B1B.idx  glext.h.0011AB85987ED28F.idx  glfw3.h.B0238364B0B7D4FD.idx  glfw_config.h.446D879B3AA441E7.idx  init.c.2B07780986C9E022.idx  input.c.09014383954DAB16.idx  internal.h.DE8D269399D66E91.idx  iokit_joystick.h.9A5B25FDC2C811D4.idx  iokit_joystick.m.2BA67DFDF2736515.idx  khrplatform.h.E05915222EA7CDA7.idx  log.h.DB3C639AF2C2A87B.idx  logger.cpp.EBD822F929882618.idx  logger.h.A92D7BA43B502E98.idx  mach_time.c.33A60F27659560B4.idx  main.cpp.92E7F7AD74683841.idx  main.cpp.F63BE0047F8A90BA.idx  monitor.c.A2456FE21C534F1F.idx  nsgl_context.h.2320153638628343.idx  nsgl_context.m.48B23C4F7C0CC0FC.idx  posix_tls.c.F216F8EDDF34F183.idx  posix_tls.h.97249C9A337C2046.idx  shader.cpp.6927F621D2B2FC73.idx  shader.h.12C1A8956A150E51.idx  types.h.F121771D7A0C6E05.idx  window.c.65B1B977914960D8.idx
01/: CMakeLists.txt  app.h  filesystem.h  main.cpp  shader.cpp  shader.h  texture.h  types.h
01/include/: application.h  camera.h  filesystem.h  game.h  gameobject.h  position.h  shader.h  texture.h  vector.h
01/include/gameobject/: cube.h  sprite.h  ui.h
01/resources/shaders/: 2d.frag  2d.vert
01/shaders/: basic.frag  basic.vert
01/src/: application.cpp  camera.cpp  game.cpp  gameobject.cpp  main.cpp  texture.cpp
nan-render/: CMakeLists.txt
nan-render/include/nan/: application.h  camera.h  filesystem.h  game.h  gameobject.h  logger.h  object.h  shader.h  sprite.h  texture.h
nan-render/include/nan/editor/: editor.h  maineditor.h
nan-render/include/nan/gameobject/: cube.h  graphic.h  sprite.h
nan-render/src/: main.cpp
nan-render/src/nan/: application.cpp  camera.cpp  game.cpp  gameobject.cpp  object.cpp  shader.cpp  sprite.cpp  texture.cpp
nan-render/src/nan/editor/: editor.cpp  maineditor.cpp
